Bug 1969820: Remove 0x00 0x0a and trailing nulls from clipboard r=win-reviewers,gstoll

We previously removed (0x00 0x0a|0x00)?.  We now remove (0x00)*(0x00 0x0a)?.

Differential Revision: https://phabricator.services.mozilla.com/D252588